Fixing spacing for four columns on big screens

--- a/src/components/Article/index.module.scss
+++ b/src/components/Article/index.module.scss
@@ -52,4 +52,9 @@
     max-width: 90rem;
     margin: 0 auto;
   }
+
+  @media screen and (min-width: 1400px) {
+    max-width: 130rem;
+    margin: 0 auto;
+  }
 }
